# utexas-art-ros-pkg

./: .gitattributes  .gitignore  README
etc/: 60-art-udev.rules  OS-install-car.txt  PLAYER-to-ROS.txt  art.rosconfig  copyright.cc  copyright.h  dot.bashrc  dot.emacs  karmic-install-car.txt  lucid-install-car.txt  octaverc.m  rosdistro.yaml  rospack.ignore  utcs-env.sh
images/: arch.dia  conversion.dia
rosinstall/: cturtle-release.rosinstall  marvin.rosinstall  release-cturtle.rosinstall  release-unstable.rosinstall  release.rosinstall  sandbox.rosinstall  unstable-release.rosinstall  utexas-art.rosinstall  velodyne.rosinstall
stacks/ackermann/: stack.xml
stacks/ackermann_teleop/: rosdep.yaml  stack.xml
stacks/ackermann_teleop/ackermann_hks/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/ackermann_teleop/ackermann_hks/cfg/: HKS.cfg
stacks/ackermann_teleop/ackermann_hks/scripts/: hks_teleop.py  pilot_cmd.py
stacks/ackermann_teleop/ackermann_qt/: mainpage.dox  manifest.xml
stacks/ackermann_teleop/ackermann_qt/cfg/: Joy.cfg  QTeleop.cfg
stacks/ackermann_teleop/ackermann_qt/scripts/: nav_estop.py  pilot_cmd.py  qteleop.py
stacks/art_vehicle/: COPYING  rosdep.yaml  stack.xml
stacks/art_vehicle/ackermann_teleop/: mainpage.dox  manifest.xml
stacks/art_vehicle/ackermann_teleop/scripts/: hks_teleop.py  qteleop.py
stacks/art_vehicle/applanix/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/applanix/msg/: GpsInfo.msg
stacks/art_vehicle/applanix/src/: adump  applanix.cc  applanix.h  odometry.cc  position.h
stacks/art_vehicle/applanix/test/: test-rpy.txt  test1.txt
stacks/art_vehicle/art_common/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_common/cfg/: CameraTransform.cfg
stacks/art_vehicle/art_common/launch/: drive_pilot.launch  monitor.launch  pilot_null.launch  stage_pilot.launch
stacks/art_vehicle/art_common/msg/: ArtHertz.msg  ArtVehicle.msg  ElementID.msg  MapXY.msg  conversions.msg  epsilon.msg  hertz.msg  vehicle.msg
stacks/art_vehicle/art_common/src/: pid.py  vehicle_configurable_tf.cc  vehicle_static_tf.cc
stacks/art_vehicle/art_image/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_map/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_map/src/node/: CMakeLists.txt  getpoints.cc  mapl.cc  pointsToRNDF.rb  rndf_lanes.cc  test_lanes.cc
stacks/art_vehicle/art_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_nav/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_nav/src/navigator/: CMakeLists.txt  Controller.h  NavEstopEvent.h  NavRoadEvent.h  avoid.cc  avoid.h  course.cc  course.h  do_nothing.cc  do_nothing.h  estop.cc  estop.h  estop.py  evade.cc  evade.h  follow_lane.cc  follow_lane.h  follow_safely.cc  follow_safely.h  fsm_road.dia  halt.h  lane_edge.cc  lane_edge.h  lane_heading.cc  lane_heading.h  navigator.cc  navigator_internal.h  ntimer.h  obstacle.cc  obstacle.h  parking.cc  parking.h  passing.cc  passing.h  queue_mgr.cc  real_zone.cc  real_zone.h  road.cc  road.h  run.cc  (+17 more)
stacks/art_vehicle/art_observers/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_observers/src/nodes/: CMakeLists.txt  QuadrilateralOps.cc  filter.cc  lane_observations.cc  lane_observer.cc  map_grid.cc  map_grid_node.cc  nearest_forward.cc  observer.cc  observers_node.cc  points_on_road.cc
stacks/art_vehicle/art_pilot/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_run/: mainpage.dox  manifest.xml
stacks/art_vehicle/art_servo/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/art_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/art_vehicle/simulator_art/: CMakeLists.txt  mainpage.dox  manifest.xml
stacks/reinforcement_learning/: stack.xml
stacks/reinforcement_learning/rl_msgs/: mainpage.dox  manifest.xml
(+405 files in other folders)
